[gd_scene load_steps=10 format=3 uid="uid://832v3uu1l2m1"]

[ext_resource type="Script" uid="uid://fa7mr561myp0" path="res://world_ui_entry.gd" id="1_aheua"]
[ext_resource type="FontFile" uid="uid://b6vt3hqj572hq" path="res://Pixel Times Bold.ttf" id="1_kvwv7"]
[ext_resource type="FontFile" uid="uid://bjsr06etnda5s" path="res://Pixel Times.ttf" id="2_aheua"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlkkf"]
bg_color = Color(1, 1, 1, 0.0235294)

[sub_resource type="LabelSettings" id="LabelSettings_8qtwp"]
font = ExtResource("1_kvwv7")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_dy7ct"]
font = ExtResource("2_aheua")
font_size = 20
font_color = Color(1, 1, 1, 0.34902)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kvwv7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aheua"]
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 0.14902)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.313726)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1anh"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 0.0431373)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.313726)
anti_aliasing = false

[node name="World" type="Panel"]
custom_minimum_size = Vector2(0, 128)
offset_right = 487.0
offset_bottom = 128.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nlkkf")
script = ExtResource("1_aheua")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="WorldName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "My World (3)"
label_settings = SubResource("LabelSettings_8qtwp")

[node name="WorldSize" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "30.21 MiB"
label_settings = SubResource("LabelSettings_dy7ct")

[node name="Constructables" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0
text = "2,934 Constructables"
label_settings = SubResource("LabelSettings_dy7ct")

[node name="LastPlayed" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "8/31/2025 - 2:35 AM"
label_settings = SubResource("LabelSettings_dy7ct")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0.6628, 0.855469, 0.554718, 1)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_aheua")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_kvwv7")
theme_override_styles/hover = SubResource("StyleBoxFlat_aheua")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q1anh")
theme_override_styles/normal = SubResource("StyleBoxFlat_q1anh")
text = "Play"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Delete" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0.855469, 0.554718, 0.554718, 1)
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_aheua")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_kvwv7")
theme_override_styles/hover = SubResource("StyleBoxFlat_aheua")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q1anh")
theme_override_styles/normal = SubResource("StyleBoxFlat_q1anh")
text = "Delete"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
